Finished CRUD's user and added exam endpoints
